--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
     "Config": [
         {
-            "token": "account token here",
-            "channelid": "channel id here",
-            "message": "message that will be sent every hour here"
+            "token": "MTI4MTg1NDM5NTQ5OTE1MTM2.Gt-WZ_.kAABIde8ekcpPsR9rmrrm1hl9D8gcu7mUCuPYE",
+            "channelid": "1243373503353454645",
+            "message": "@nekoloveraly  time to drink water"
          }
     ]
 }
